{
  "version": 4,
  "terraform_version": "1.9.6",
  "serial": 27,
  "lineage": "d633844a-9787-4ad3-d76c-ca5ed8c74b00",
  "resources": [
    {
      "mode": "managed",
      "type": "azurerm_lb",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "frontend_ip_configuration": [
              {
                "id": "/subscriptions/64a9a252-e2ca-4cc3-af56-31bf09b86699/resourceGroups/huongttt13-resources/providers/Microsoft.Network/loadBalancers/huongttt13-lb/frontendIPConfigurations/primary",
                "name": "primary",
                "private_ip_address_allocation": "Dynamic",
                "public_ip_address_id": "/subscriptions/64a9a252-e2ca-4cc3-af56-31bf09b86699/resourceGroups/huongttt13-resources/providers/Microsoft.Network/publicIPAddresses/huongttt13-pip"
              }
            ],
            "id": "/subscriptions/64a9a252-e2ca-4cc3-af56-31bf09b86699/resourceGroups/huongttt13-resources/providers/Microsoft.Network/loadBalancers/huongttt13-lb",
            "location": "southeastasia",
            "name": "huongttt13-lb",
            "resource_group_name": "huongttt13-resources",
            "sku": "Standard",
            "sku_tier": "Regional",
            "tags": {
              "Environment": "dev",
              "Owner": "HuongTTT13"
            }
          },
          "dependencies": [
            "azurerm_public_ip.main",
            "azurerm_resource_group.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_lb_backend_address_pool",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/64a9a252-e2ca-4cc3-af56-31bf09b86699/resourceGroups/huongttt13-resources/providers/Microsoft.Network/loadBalancers/huongttt13-lb/backendAddressPools/acctestpool",
            "loadbalancer_id": "/subscriptions/64a9a252-e2ca-4cc3-af56-31bf09b86699/resourceGroups/huongttt13-resources/providers/Microsoft.Network/loadBalancers/huongttt13-lb",
            "name": "acctestpool"
          },
          "dependencies": [
            "azurerm_lb.main",
            "azurerm_public_ip.main",
            "azurerm_resource_group.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_lb_probe",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/64a9a252-e2ca-4cc3-af56-31bf09b86699/resourceGroups/huongttt13-resources/providers/Microsoft.Network/loadBalancers/huongttt13-lb/probes/huongttt13-probe",
            "interval_in_seconds": 5,
            "loadbalancer_id": "/subscriptions/64a9a252-e2ca-4cc3-af56-31bf09b86699/resourceGroups/huongttt13-resources/providers/Microsoft.Network/loadBalancers/huongttt13-lb",
            "name": "huongttt13-probe",
            "number_of_probes": 2,
            "port": 80,
            "probe_threshold": 1,
            "protocol": "Tcp"
          },
          "dependencies": [
            "azurerm_lb.main",
            "azurerm_public_ip.main",
            "azurerm_resource_group.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_lb_rule",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "backend_address_pool_ids": [
              "/subscriptions/64a9a252-e2ca-4cc3-af56-31bf09b86699/resourceGroups/huongttt13-resources/providers/Microsoft.Network/loadBalancers/huongttt13-lb/backendAddressPools/acctestpool"
            ],
            "backend_port": 80,
            "disable_outbound_snat": false,
            "enable_floating_ip": false,
            "enable_tcp_reset": false,
            "frontend_ip_configuration_id": "/subscriptions/64a9a252-e2ca-4cc3-af56-31bf09b86699/resourceGroups/huongttt13-resources/providers/Microsoft.Network/loadBalancers/huongttt13-lb/frontendIPConfigurations/primary",
            "frontend_ip_configuration_name": "primary",
            "frontend_port": 80,
            "id": "/subscriptions/64a9a252-e2ca-4cc3-af56-31bf09b86699/resourceGroups/huongttt13-resources/providers/Microsoft.Network/loadBalancers/huongttt13-lb/loadBalancingRules/huongttt13-LBRule",
            "idle_timeout_in_minutes": 4,
            "load_distribution": "Default",
            "loadbalancer_id": "/subscriptions/64a9a252-e2ca-4cc3-af56-31bf09b86699/resourceGroups/huongttt13-resources/providers/Microsoft.Network/loadBalancers/huongttt13-lb",
            "name": "huongttt13-LBRule",
            "probe_id": "/subscriptions/64a9a252-e2ca-4cc3-af56-31bf09b86699/resourceGroups/huongttt13-resources/providers/Microsoft.Network/loadBalancers/huongttt13-lb/probes/huongttt13-probe",
            "protocol": "Tcp"
          },
          "dependencies": [
            "azurerm_lb.main",
            "azurerm_lb_backend_address_pool.main",
            "azurerm_lb_probe.main",
            "azurerm_public_ip.main",
            "azurerm_resource_group.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "accelerated_networking_enabled": false,
            "id": "/subscriptions/64a9a252-e2ca-4cc3-af56-31bf09b86699/resourceGroups/huongttt13-resources/providers/Microsoft.Network/networkInterfaces/huongttt13-nic0",
            "internal_domain_name_suffix": "lrndlz4fju4udfsbanfe1rxnea.ix.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "internal",
                "primary": true,
                "private_ip_address": "10.0.2.4",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "subnet_id": "/subscriptions/64a9a252-e2ca-4cc3-af56-31bf09b86699/resourceGroups/huongttt13-resources/providers/Microsoft.Network/virtualNetworks/huongttt13-vnet/subnets/huongttt13-subnet"
              }
            ],
            "ip_forwarding_enabled": false,
            "location": "southeastasia",
            "name": "huongttt13-nic0",
            "private_ip_address": "10.0.2.4",
            "private_ip_addresses": [
              "10.0.2.4"
            ],
            "resource_group_name": "huongttt13-resources",
            "tags": {
              "Environment": "dev",
              "Owner": "HuongTTT13"
            }
          },
          "dependencies": [
            "azurerm_resource_group.main",
            "azurerm_subnet.main",
            "azurerm_virtual_network.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "accelerated_networking_enabled": false,
            "id": "/subscriptions/64a9a252-e2ca-4cc3-af56-31bf09b86699/resourceGroups/huongttt13-resources/providers/Microsoft.Network/networkInterfaces/huongttt13-nic1",
            "internal_domain_name_suffix": "lrndlz4fju4udfsbanfe1rxnea.ix.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "internal",
                "primary": true,
                "private_ip_address": "10.0.2.5",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "subnet_id": "/subscriptions/64a9a252-e2ca-4cc3-af56-31bf09b86699/resourceGroups/huongttt13-resources/providers/Microsoft.Network/virtualNetworks/huongttt13-vnet/subnets/huongttt13-subnet"
              }
            ],
            "ip_forwarding_enabled": false,
            "location": "southeastasia",
            "name": "huongttt13-nic1",
            "private_ip_address": "10.0.2.5",
            "private_ip_addresses": [
              "10.0.2.5"
            ],
            "resource_group_name": "huongttt13-resources",
            "tags": {
              "Environment": "dev",
              "Owner": "HuongTTT13"
            }
          },
          "dependencies": [
            "azurerm_resource_group.main",
            "azurerm_subnet.main",
            "azurerm_virtual_network.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_interface_backend_address_pool_association",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "backend_address_pool_id": "/subscriptions/64a9a252-e2ca-4cc3-af56-31bf09b86699/resourceGroups/huongttt13-resources/providers/Microsoft.Network/loadBalancers/huongttt13-lb/backendAddressPools/acctestpool",
            "id": "/subscriptions/64a9a252-e2ca-4cc3-af56-31bf09b86699/resourceGroups/huongttt13-resources/providers/Microsoft.Network/networkInterfaces/huongttt13-nic0/ipConfigurations/internal|/subscriptions/64a9a252-e2ca-4cc3-af56-31bf09b86699/resourceGroups/huongttt13-resources/providers/Microsoft.Network/loadBalancers/huongttt13-lb/backendAddressPools/acctestpool",
            "ip_configuration_name": "internal",
            "network_interface_id": "/subscriptions/64a9a252-e2ca-4cc3-af56-31bf09b86699/resourceGroups/huongttt13-resources/providers/Microsoft.Network/networkInterfaces/huongttt13-nic0"
          },
          "dependencies": [
            "azurerm_lb.main",
            "azurerm_lb_backend_address_pool.main",
            "azurerm_network_interface.main",
            "azurerm_public_ip.main",
            "azurerm_resource_group.main",
            "azurerm_subnet.main",
            "azurerm_virtual_network.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "backend_address_pool_id": "/subscriptions/64a9a252-e2ca-4cc3-af56-31bf09b86699/resourceGroups/huongttt13-resources/providers/Microsoft.Network/loadBalancers/huongttt13-lb/backendAddressPools/acctestpool",
            "id": "/subscriptions/64a9a252-e2ca-4cc3-af56-31bf09b86699/resourceGroups/huongttt13-resources/providers/Microsoft.Network/networkInterfaces/huongttt13-nic1/ipConfigurations/internal|/subscriptions/64a9a252-e2ca-4cc3-af56-31bf09b86699/resourceGroups/huongttt13-resources/providers/Microsoft.Network/loadBalancers/huongttt13-lb/backendAddressPools/acctestpool",
            "ip_configuration_name": "internal",
            "network_interface_id": "/subscriptions/64a9a252-e2ca-4cc3-af56-31bf09b86699/resourceGroups/huongttt13-resources/providers/Microsoft.Network/networkInterfaces/huongttt13-nic1"
          },
          "dependencies": [
            "azurerm_lb.main",
            "azurerm_lb_backend_address_pool.main",
            "azurerm_network_interface.main",
            "azurerm_public_ip.main",
            "azurerm_resource_group.main",
            "azurerm_subnet.main",
            "azurerm_virtual_network.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_interface_security_group_association",
      "name": "my_security_group_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/64a9a252-e2ca-4cc3-af56-31bf09b86699/resourceGroups/huongttt13-resources/providers/Microsoft.Network/networkInterfaces/huongttt13-nic0|/subscriptions/64a9a252-e2ca-4cc3-af56-31bf09b86699/resourceGroups/huongttt13-resources/providers/Microsoft.Network/networkSecurityGroups/huongttt13-security-group",
            "network_interface_id": "/subscriptions/64a9a252-e2ca-4cc3-af56-31bf09b86699/resourceGroups/huongttt13-resources/providers/Microsoft.Network/networkInterfaces/huongttt13-nic0",
            "network_security_group_id": "/subscriptions/64a9a252-e2ca-4cc3-af56-31bf09b86699/resourceGroups/huongttt13-resources/providers/Microsoft.Network/networkSecurityGroups/huongttt13-security-group"
          },
          "dependencies": [
            "azurerm_network_interface.main",
            "azurerm_network_security_group.main",
            "azurerm_resource_group.main",
            "azurerm_subnet.main",
            "azurerm_virtual_network.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/64a9a252-e2ca-4cc3-af56-31bf09b86699/resourceGroups/huongttt13-resources/providers/Microsoft.Network/networkInterfaces/huongttt13-nic1|/subscriptions/64a9a252-e2ca-4cc3-af56-31bf09b86699/resourceGroups/huongttt13-resources/providers/Microsoft.Network/networkSecurityGroups/huongttt13-security-group",
            "network_interface_id": "/subscriptions/64a9a252-e2ca-4cc3-af56-31bf09b86699/resourceGroups/huongttt13-resources/providers/Microsoft.Network/networkInterfaces/huongttt13-nic1",
            "network_security_group_id": "/subscriptions/64a9a252-e2ca-4cc3-af56-31bf09b86699/resourceGroups/huongttt13-resources/providers/Microsoft.Network/networkSecurityGroups/huongttt13-security-group"
          },
          "dependencies": [
            "azurerm_network_interface.main",
            "azurerm_network_security_group.main",
            "azurerm_resource_group.main",
            "azurerm_subnet.main",
            "azurerm_virtual_network.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/64a9a252-e2ca-4cc3-af56-31bf09b86699/resourceGroups/huongttt13-resources/providers/Microsoft.Network/networkSecurityGroups/huongttt13-security-group",
            "location": "southeastasia",
            "name": "huongttt13-security-group",
            "resource_group_name": "huongttt13-resources",
            "security_rule": [],
            "tags": {
              "Environment": "dev",
              "Owner": "HuongTTT13"
            },
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_resource_group.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_rule",
      "name": "AllowHTTPTrafficFromLoadBalancer",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "Allow HTTP traffic to the VMs from the load balancer.",
            "destination_address_prefix": "VirtualNetwork",
            "destination_address_prefixes": null,
            "destination_application_security_group_ids": null,
            "destination_port_range": "*",
            "destination_port_ranges": null,
            "direction": "Inbound",
            "id": "/subscriptions/64a9a252-e2ca-4cc3-af56-31bf09b86699/resourceGroups/huongttt13-resources/providers/Microsoft.Network/networkSecurityGroups/huongttt13-security-group/securityRules/AllowHTTPTrafficFromLoadBalancer",
            "name": "AllowHTTPTrafficFromLoadBalancer",
            "network_security_group_name": "huongttt13-security-group",
            "priority": 103,
            "protocol": "Tcp",
            "resource_group_name": "huongttt13-resources",
            "source_address_prefix": "AzureLoadBalancer",
            "source_address_prefixes": null,
            "source_application_security_group_ids": null,
            "source_port_range": "*",
            "source_port_ranges": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_network_security_group.main",
            "azurerm_resource_group.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_rule",
      "name": "AllowInboundSameVirtualNetwork",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "Allow inbound traffick inside the same Virtual Network",
            "destination_address_prefix": "VirtualNetwork",
            "destination_address_prefixes": null,
            "destination_application_security_group_ids": null,
            "destination_port_range": "*",
            "destination_port_ranges": null,
            "direction": "Inbound",
            "id": "/subscriptions/64a9a252-e2ca-4cc3-af56-31bf09b86699/resourceGroups/huongttt13-resources/providers/Microsoft.Network/networkSecurityGroups/huongttt13-security-group/securityRules/AllowInboundSameVirtualNetwork",
            "name": "AllowInboundSameVirtualNetwork",
            "network_security_group_name": "huongttt13-security-group",
            "priority": 101,
            "protocol": "*",
            "resource_group_name": "huongttt13-resources",
            "source_address_prefix": "VirtualNetwork",
            "source_address_prefixes": null,
            "source_application_security_group_ids": null,
            "source_port_range": "*",
            "source_port_ranges": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_network_security_group.main",
            "azurerm_resource_group.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_rule",
      "name": "AllowOutboundSameVirtualNetwork",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "Allow outbound traffick inside the same Virtual Network",
            "destination_address_prefix": "VirtualNetwork",
            "destination_address_prefixes": null,
            "destination_application_security_group_ids": null,
            "destination_port_range": "*",
            "destination_port_ranges": null,
            "direction": "Outbound",
            "id": "/subscriptions/64a9a252-e2ca-4cc3-af56-31bf09b86699/resourceGroups/huongttt13-resources/providers/Microsoft.Network/networkSecurityGroups/huongttt13-security-group/securityRules/AllowOutboundSameVirtualNetwork",
            "name": "AllowOutboundSameVirtualNetwork",
            "network_security_group_name": "huongttt13-security-group",
            "priority": 102,
            "protocol": "*",
            "resource_group_name": "huongttt13-resources",
            "source_address_prefix": "VirtualNetwork",
            "source_address_prefixes": null,
            "source_application_security_group_ids": null,
            "source_port_range": "*",
            "source_port_ranges": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_network_security_group.main",
            "azurerm_resource_group.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_rule",
      "name": "DenyAllInbound",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access": "Deny",
            "description": "This rule with low priority deny all the inbound traffic",
            "destination_address_prefix": "*",
            "destination_address_prefixes": null,
            "destination_application_security_group_ids": null,
            "destination_port_range": "*",
            "destination_port_ranges": null,
            "direction": "Inbound",
            "id": "/subscriptions/64a9a252-e2ca-4cc3-af56-31bf09b86699/resourceGroups/huongttt13-resources/providers/Microsoft.Network/networkSecurityGroups/huongttt13-security-group/securityRules/DenyAllInbound",
            "name": "DenyAllInbound",
            "network_security_group_name": "huongttt13-security-group",
            "priority": 100,
            "protocol": "*",
            "resource_group_name": "huongttt13-resources",
            "source_address_prefix": "*",
            "source_address_prefixes": null,
            "source_application_security_group_ids": null,
            "source_port_range": "*",
            "source_port_ranges": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_network_security_group.main",
            "azurerm_resource_group.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_public_ip",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Static",
            "ddos_protection_mode": "VirtualNetworkInherited",
            "domain_name_label": "huongttt13-resources",
            "fqdn": "huongttt13-resources.southeastasia.cloudapp.azure.com",
            "id": "/subscriptions/64a9a252-e2ca-4cc3-af56-31bf09b86699/resourceGroups/huongttt13-resources/providers/Microsoft.Network/publicIPAddresses/huongttt13-pip",
            "idle_timeout_in_minutes": 4,
            "ip_address": "52.230.29.81",
            "ip_version": "IPv4",
            "location": "southeastasia",
            "name": "huongttt13-pip",
            "resource_group_name": "huongttt13-resources",
            "sku": "Standard",
            "sku_tier": "Regional",
            "tags": {
              "Environment": "dev",
              "Owner": "HuongTTT13"
            }
          },
          "dependencies": [
            "azurerm_resource_group.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.0.2.0/24"
            ],
            "default_outbound_access_enabled": true,
            "id": "/subscriptions/64a9a252-e2ca-4cc3-af56-31bf09b86699/resourceGroups/huongttt13-resources/providers/Microsoft.Network/virtualNetworks/huongttt13-vnet/subnets/huongttt13-subnet",
            "name": "huongttt13-subnet",
            "private_endpoint_network_policies": "Disabled",
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "huongttt13-resources",
            "virtual_network_name": "huongttt13-vnet"
          },
          "dependencies": [
            "azurerm_resource_group.main",
            "azurerm_virtual_network.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_virtual_network",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_space": [
              "10.0.0.0/22"
            ],
            "flow_timeout_in_minutes": 0,
            "guid": "e7355a5c-4dc5-413d-9641-034a4dc6ed20",
            "id": "/subscriptions/64a9a252-e2ca-4cc3-af56-31bf09b86699/resourceGroups/huongttt13-resources/providers/Microsoft.Network/virtualNetworks/huongttt13-vnet",
            "location": "southeastasia",
            "name": "huongttt13-vnet",
            "resource_group_name": "huongttt13-resources",
            "tags": {
              "Environment": "dev",
              "Owner": "HuongTTT13"
            }
          },
          "dependencies": [
            "azurerm_resource_group.main"
          ]
        }
      ]
    }
  ]
}